Added basic crud operations for todos

--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,7 @@
   --secondaryText: hsl(0, 0%, 60%);
   --backgroundDark: hsl(0, 0%, 0%);
   --background: hsl(0, 0%, 5%, 50%);
+  --backgroundTransparent: hsl(0deg 0% 10% / 50%);
   --backgroundTextContrastShadow: hsl(0, 0%, 5%, 25%);
   --backgroundLight: hsl(0, 0%, 10%);
   --borderColor: hsl(0, 0%, 15%, 90%);
