--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,12 @@
   --borderColor: hsl(0, 0%, 15%, 90%);
   --borderHoverColor: hsl(0, 0%, 25%, 90%);
 
+  --buttonHoverBackground: var(--primaryText);
+  --buttonHoverTextColor: var(--backgroundDark);
+  --buttonActiveBackground: hsl(0, 0%, 65%);
+  --buttonSelectedBackground: hsl(0, 0%, 25%);
+  --buttonSelectedBorderColor: var(--secondaryText);
+
   --shadow-highlight: hsla(0, 0%, 100%, 15%);
   --shadow-dark: hsla(0, 0%, 0%, 30%);
   --shadow-mid: hsla(0, 0%, 0%, 15%);
@@ -35,8 +41,7 @@
   --info: hsl(204, 100%, 50%);
   --infoSecondary: hsl(204, 100%, 15%);
 
-  --cellSize: 128px;
-  --cellGap: 1rem;
+  --contentMaxWidth: 850px;
 }
 
 :root {
@@ -51,9 +56,19 @@ body {
   box-sizing: border-box;
 
   height: 100%;
+  min-height: 100vh;
   width: 100%;
   display: flex;
 
+  scrollbar-gutter: stable;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: url(background.png);
   background-repeat: no-repeat;
   background-size: cover;
