--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,8 @@
   --buttonActiveBackground: hsl(0, 0%, 65%);
   --buttonSelectedBackground: hsl(0, 0%, 25%);
   --buttonSelectedBorderColor: var(--secondaryText);
+  --buttonPrimaryBackground: var(--primaryText);
+  --buttonPrimaryTextColor: var(--backgroundDark);
 
   --shadow-highlight: hsla(0, 0%, 100%, 15%);
   --shadow-dark: hsla(0, 0%, 0%, 30%);
