--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,7 @@
   --borderColor: hsl(0, 0%, 15%, 90%);
   --borderHoverColor: hsl(0, 0%, 25%, 90%);
 
+  --buttonFocusBorderColor: var(--primaryText);
   --buttonHoverBackground: var(--primaryText);
   --buttonHoverTextColor: var(--backgroundDark);
   --buttonActiveBackground: hsl(0, 0%, 65%);
